--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/vector-icons": "^12.0.0",
+    "@react-navigation/bottom-tabs": "^6.0.1",
+    "@react-navigation/drawer": "^6.0.1",
+    "@react-navigation/material-bottom-tabs": "^6.0.1",
     "@react-navigation/native": "^6.0.1",
     "@react-navigation/native-stack": "^6.0.2",
     "expo": "~42.0.1",
@@ -17,9 +21,13 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native-gesture-handler": "~1.10.2",
+    "react-native-paper": "^4.9.2",
+    "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "react-navigation-header-buttons": "^7.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
